more style this time

--- a/index.html
+++ b/index.html
@@ -3,60 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>Zerowasteapartment</title>
-    <style>
-      @font-face {
-        font-family: bebas;
-        src: url(fonts/BebasNeue-Regular.woff);
-      }
-      @font-face {
-        font-family: montserrat;
-        src: url(fonts/MontserratAlternates-ExtraLight.otf);
-      }
-      @font-face {
-        font-family: roboto;
-        src: url(fonts/Roboto-Regular.ttf);
-      }
-      
-      body{
-          font-family: roboto;
-          background-color: white;
-          text-align: center;
-      }
-      h1{ font-family: bebas; }
-      h2{ font-family: montserrat; }
-    </style>
+    <link rel="stylesheet" href="public/style.css">
   </head>
   <body>
-    <h1>Zero Waste Apartment</h1>
-    <h2>👣 🌍 🌱</h2>
-    <p>Stay at Athens FIRST ZERO WASTE APARTMENT for short term rent.</p>
-    <img class="fit-picture" src="pictures/IMGP31.jpg" alt="Zerowasteapartment" />
-    <h2>WHY are we creating veg zero waste homes ?</h2>
-    <strong>Simply, because we love nature❤️ </strong>
-    <p>
-      ☀️ We are creating zero waste households and putting sustainability into practice in order to prove their feasibility. We are embracing the environmental movement that seeks to reduce the amount of garbage on the planet by changing people’s personal consumption habits.
-    </p>
-    <p>
-      <a href="http://girlsinvestgreece.io" target="_blank">girls invest greece</a>
-      🐢 Slow down & enter a quiet oasis after a long day in Athens urban jungle. Enjoy a calm and clean atmosphere while experiencing a zero waste lifestyle.
-    </p>
+    <div id="img-front"></div>
+    <header>
+      <h1>Zero Waste Apartment</h1>
+      <h2>Stay at Athens FIRST ZERO WASTE APARTMENT for short term rent.</h2>
+    </header>
+    <main>
+      <div id="emojis">👣 🌍 🌱</div>
+      <section id="one">
+          <h3>WHY are we creating veg zero waste homes ?</h3>
+      </section>
+      <section id="two">
+        <strong>❤️ Simply, because we love nature ❤️</strong>
+      </section>
+      <article>
+        <h2>WHAT are we doing ?</h2>
+        <p>
+          ☀️ We are creating zero waste households and putting sustainability into practice in order to prove their feasibility. We are embracing the environmental movement that seeks to reduce the amount of garbage on the planet by changing people’s personal consumption habits.
+        </p>
+      </article>
+      <div id="img-last"></div>
+      <p>
+        <a href="http://girlsinvestgreece.io" target="_blank">girls invest greece</a>
+        🐢 Slow down & enter a quiet oasis after a long day in Athens urban jungle. Enjoy a calm and clean atmosphere while experiencing a zero waste lifestyle.
+      </p>
 
-    <h2>WHAT are we doing ?</h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
 
-    <!--list-->
-    <ul>
-      <li>kitchen</li>
-      <li>kitchen</li>
-    </ul>
-    <!--forms-->
-    <form class="" action="index.html" method="post">
-      <label> Name </label>
-    </form>
+      <!--list-->
+      <ul>
+        <li>kitchen</li>
+        <li>kitchen</li>
+      </ul>
+      <!--forms-->
+      <form class="" action="index.html" method="post">
+        <label> Name </label>
+      </form>
+    </main>
   </body>
 </html>
