logos to external srcs + contact form

--- a/index.html
+++ b/index.html
@@ -26,27 +26,33 @@
         </p>
       </article>
       <div id="img-last"></div>
-      <p>
-        <a href="http://girlsinvestgreece.io" target="_blank">girls invest greece</a>
-        🐢 Slow down & enter a quiet oasis after a long day in Athens urban jungle. Enjoy a calm and clean atmosphere while experiencing a zero waste lifestyle.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-
-      <!--list-->
-      <ul>
-        <li>kitchen</li>
-        <li>kitchen</li>
-      </ul>
-      <!--forms-->
-      <form class="" action="index.html" method="post">
-        <label> Name </label>
-      </form>
+      <article>
+        <p>
+          🐢 Slow down & enter a quiet oasis after a long day in Athens urban jungle. Enjoy a calm and clean atmosphere while experiencing a zero waste lifestyle.
+        </p>
+      </article>
+      <a href="https://ecobnb.com/GR-athens/bed-breakfast/athens-first-zero-waste-apartment/51DCC" target="_blank">
+        <img class="logo" src="public/assets/ecobnb.png" alt="ecobnb">
+      </a>
+      <a href="https://www.airbnb.co.uk/rooms/37611892" target="_blank">
+        <img class="logo" src="public/assets/airbnb.png" alt="airbnb">
+      </a>
+      <a href="https://www.facebook.com/404048180148626/posts/have-a-look-at-athens-first-zero-waste-apartment-in-exarchia-soon-available-for-/429974997555944/" target="_blank">
+        <img class="logo" src="public/assets/facebook.png" alt="facebook">
+      </a>
+      <article>
+        <h2>Let's keep in touch</h2>
+        <form action="index.html" method="post">
+          <input type="email" name="email" placeholder="Your email">
+          <textarea name="message" placeholder="Your message" maxlength="512"></textarea>
+          <input type="submit" value="Send your message">
+        </form>
+      </article>
+      <footer>
+        <ul>
+          <li><a href="http://girlsinvestgreece.io" target="_blank">girls invest greece</a></li>
+        </ul>
+      </footer>
     </main>
   </body>
 </html>
