--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       <a data-aos="zoom-in"
       data-aos-duration="4000"
       href="https://ecobnb.com/GR-athens/bed-breakfast/athens-first-zero-waste-apartment/51DCC" target="_blank">
-        <img class="logo" src="public/assets/ecobnb.png" alt="ecobnb">
+        <img class="logo" src="public/assets/brands/ecobnb.png" alt="ecobnb">
       </a>
       <a data-aos="zoom-in"
       data-aos-duration="2000"
       data-aos-delay="100"
       href="https://www.airbnb.co.uk/rooms/37611892" target="_blank">
-        <img class="logo" src="public/assets/airbnb.png" alt="airbnb">
+        <img class="logo" src="public/assets/brands/airbnb.png" alt="airbnb">
       </a>
       <a data-aos="zoom-in"
       data-aos-duration="3000"
       data-aos-delay="300"
       href="https://www.facebook.com/404048180148626/posts/have-a-look-at-athens-first-zero-waste-apartment-in-exarchia-soon-available-for-/429974997555944/" target="_blank">
-        <img class="logo" src="public/assets/facebook.png" alt="facebook">
+        <img class="logo" src="public/assets/brands/facebook.png" alt="facebook">
       </a>
       <article data-aos="flip-left">
         <h2>Let's keep in touch</h2>
