booklet download link on preview carousel

--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
       href="https://www.facebook.com/404048180148626/posts/have-a-look-at-athens-first-zero-waste-apartment-in-exarchia-soon-available-for-/429974997555944/" target="_blank">
         <img class="logo" src="public/assets/brands/facebook.png" alt="facebook">
       </a>
+      <article data-aos="zoom-in">
+        <h3>Download our explanatory booklet</h3>
+        <a href="public/zero-waste-community.pdf" target="_blank">
+          <div id="slider">
+            <figure>
+              <img src="public/assets/booklet-preview/1.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/2.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/3.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/4.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/1.png" alt="booklet preview">
+            </figure>
+          </div>
+        </a>
+      </article>
       <article data-aos="flip-left">
         <h2>Let's keep in touch</h2>
         <form action="index.html" method="post">
