--- a/www/index.html
+++ b/www/index.html
@@ -3,22 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Zerowasteapartment</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="/lib/aos/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="public/style.css">
+    <link href="public/lib/aos/aos.css" rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <a href="https://ecobnb.com/GR-athens/bed-breakfast/athens-first-zero-waste-apartment/51DCC" target="_blank">
+        Book
+      </a>
+      <div id="logo">Zero waste short term rental</div>
+    </nav>
     <div id="img-front"></div>
     <header data-aos="fade-right">
       <h1>Zero Waste Apartment</h1>
-      <h2>Stay at Athens FIRST ZERO WASTE APARTMENT for short term rent.</h2>
+      <h2>We create zero waste short term rentals</h2>
     </header>
     <main>
-      <div id="emojis" data-aos="zoom-in">👣 🌍 🌱</div>
-      <section id="one">
-          <h3 data-aos="fade-right">WHY are we creating veg zero waste homes ?</h3>
-      </section>
-      <section id="two" data-aos="fade-up">
-        <strong>❤️ Simply, because we love nature ❤️</strong>
+      <section id="vision">
+        <div>
+        </div>
+        <article>
+          <h1>Our vision</h1>
+          <p>
+            We are embracing the environmental movement that seeks to reduce the amount of garbage on the planet by waste prevention.
+          </p>
+          <p>
+            By creating zero waste households and putting sustainability into practice, we are changing people’s personal consumption habits.
+          </p>
+          <p>
+            Proving the feasibility of living zero waste opens a whole new world.
+          </p>
+        </article>
       </section>
       <article data-aos="fade-right">
         <h2>WHAT are we doing ?</h2>
@@ -35,19 +50,19 @@
       <a data-aos="zoom-in"
       data-aos-duration="4000"
       href="https://ecobnb.com/GR-athens/bed-breakfast/athens-first-zero-waste-apartment/51DCC" target="_blank">
-        <img class="logo" src="/assets/brands/ecobnb.png" alt="ecobnb">
+        <img class="brand-logo" src="public/assets/brands/ecobnb.png" alt="ecobnb">
       </a>
       <a data-aos="zoom-in"
       data-aos-duration="2000"
       data-aos-delay="100"
       href="https://www.airbnb.co.uk/rooms/37611892" target="_blank">
-        <img class="logo" src="/assets/brands/airbnb.png" alt="airbnb">
+        <img class="brand-logo" src="public/assets/brands/airbnb.png" alt="airbnb">
       </a>
       <a data-aos="zoom-in"
       data-aos-duration="3000"
       data-aos-delay="300"
       href="https://www.facebook.com/404048180148626/posts/have-a-look-at-athens-first-zero-waste-apartment-in-exarchia-soon-available-for-/429974997555944/" target="_blank">
-        <img class="logo" src="/assets/brands/facebook.png" alt="facebook">
+        <img class="brand-logo" src="public/assets/brands/facebook.png" alt="facebook">
       </a>
       <article
       data-aos="zoom-in"
@@ -57,15 +72,16 @@
         <a href="/zero-waste-community.pdf" target="_blank">
           <div id="slider">
             <figure>
-              <img src="/assets/booklet-preview/1.png" alt="booklet preview">
-              <img src="/assets/booklet-preview/2.png" alt="booklet preview">
-              <img src="/assets/booklet-preview/3.png" alt="booklet preview">
-              <img src="/assets/booklet-preview/4.png" alt="booklet preview">
-              <img src="/assets/booklet-preview/1.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/1.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/2.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/3.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/4.png" alt="booklet preview">
+              <img src="public/assets/booklet-preview/1.png" alt="booklet preview">
             </figure>
           </div>
         </a>
       </article>
+      <!--
       <article id="contact" data-aos="flip-left">
         <h2>Let's keep in touch</h2>
         <%= email.error %>
@@ -76,6 +92,7 @@
           <input type="submit" value="Send your message">
         </form>
       </article>
+    -->
       <footer>
         <ul>
           <li><a href="http://girlsinvestgreece.io" target="_blank">girls invest greece</a></li>
@@ -84,7 +101,7 @@
     </main>
 
     <!-- scripts -->
-    <script src="/lib/aos/aos.js"></script>
+    <script src="public/lib/aos/aos.js"></script>
     <script>
       AOS.init();
       /* https://michalsnik.github.io/aos/ */
